updated moviecard ui and fixed spacing

--- a/src/global.css
+++ b/src/global.css
@@ -57,13 +57,22 @@ input:focus {
 .moviecard {
   display: flex;
   flex-direction: column;
-  /* height: 200px;
-  width: 100px; */
+  width: 115px;
+  height: 200px;
   background-color: pink;
   padding: 0.5rem;
+  gap: 0.5rem;
   font-size: 2rem;
+  border-radius: 0.2em;
+  align-items: center;
 }
-
+.total-tag {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: end;
+  font-size: 3rem;
+}
 .moviecard > img {
   height: 80%;
 }
@@ -72,6 +81,10 @@ input:focus {
   height: 20%;
 }
 
+.movie-title {
+  font-size: 1rem;
+  padding: 0.5rem;
+}
 .body {
   display: flex;
   flex-wrap: wrap;
@@ -159,5 +172,9 @@ input:focus {
 }
 
 main {
+  padding: 1rem;
   background-color: #ae2d11;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
